docs: 添加 `README.md`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dbishop"
 version = "0.1.0"
 edition = "2021"
+readme = "README.md"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
