--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "dbishop"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 readme = "README.md"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 hex = "0.4.3"
+sha2 = "0.10.8"
 thiserror = "1.0.50"
